// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> CustomColor story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="2em"
  style="--icon-size: 2em;"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> Default story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> FullScreen story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="100vh"
  style="--icon-size: 100vh;"
  width="100vh"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> IconGrid story renders snapshot 1`] = `
<div>
  <ul
    class="icon-grid"
  >
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#account-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        account-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add-alarm"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add-alarm
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add-comment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add-comment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#add"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        add
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#alarm"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        alarm
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-back"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-back
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-downward"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-downward
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-forward"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-forward
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-narrow-down"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-narrow-down
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-narrow-left"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-narrow-left
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-narrow-right"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-narrow-right
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-narrow-up"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-narrow-up
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#arrow-upward"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        arrow-upward
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assessment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assessment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assignment-late"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assignment-late
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assignment-turned-in"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assignment-turned-in
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#assignment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        assignment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#attachment"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        attachment
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#autorenew"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        autorenew
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#book"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        book
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#bookmark"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        bookmark
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#business-center"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        business-center
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#campaign"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        campaign
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#cancel"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        cancel
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#category"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        category
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#check-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        check-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#check"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        check
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#chevron-left"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        chevron-left
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#chevron-right"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        chevron-right
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#class-copy"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        class-copy
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#close"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        close
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#cloud-done"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        cloud-done
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#copy"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        copy
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#create-new-folder"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        create-new-folder
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#create"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        create
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#dangerous"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        dangerous
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#delete"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        delete
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#description"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        description
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#dots-horizontal"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        dots-horizontal
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#dots-vertical"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        dots-vertical
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#drag-indicator"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        drag-indicator
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#error"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        error
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event-available"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event-available
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event-busy"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event-busy
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event-note"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event-note
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#event"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        event
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#expand-less"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        expand-less
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#expand-more"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        expand-more
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#face"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        face
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#favorite"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        favorite
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#feedback"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        feedback
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#file-copy"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        file-copy
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#filter-list"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        filter-list
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#flag"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        flag
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#folder"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        folder
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#forum"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        forum
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#gesture"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        gesture
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#help"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        help
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#home"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        home
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#info"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        info
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#insert-drive-file"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        insert-drive-file
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#library-books"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        library-books
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#link"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        link
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#local-library"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        local-library
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#lock-open"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        lock-open
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#lock"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        lock
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#map"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        map
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#menu-book"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        menu-book
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#menu"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        menu
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#mic"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        mic
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#mood"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        mood
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#more-vert"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        more-vert
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#notifications"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        notifications
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#ondemand-video"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        ondemand-video
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#open-in-new"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        open-in-new
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#people"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        people
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#person-add"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        person-add
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#play-arrow"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        play-arrow
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#print"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        print
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#question-answer"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        question-answer
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#record-voice-over"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        record-voice-over
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#remove"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        remove
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#schedule"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        schedule
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#school"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        school
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#search"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        search
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#sentiment-dissatisfied"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        sentiment-dissatisfied
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#sentiment-satisfied"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        sentiment-satisfied
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#sentiment-very-satisfied"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        sentiment-very-satisfied
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#settings-voice"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        settings-voice
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#settings"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        settings
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#share-custom"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        share-custom
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#spa"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        spa
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#spinner"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        spinner
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#star-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        star-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#star"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        star
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#supervised-user-circle"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        supervised-user-circle
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#swap-vert"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        swap-vert
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#thumb-down"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        thumb-down
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#thumb-up"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        thumb-up
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#timeline"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        timeline
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#timer-off"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        timer-off
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#timer"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        timer
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#trending-up"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        trending-up
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#unfold-more"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        unfold-more
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#view-day"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        view-day
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#view-headline"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        view-headline
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#view-module"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        view-module
      </span>
    </li>
    <li
      class="icon-grid__item"
    >
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        xmlns="http://www.w3.org/2000/svg"
      >
        <use
          xlink:href="test-file-stub#warning"
        />
      </svg>
      <span
        class="icon-grid__text"
      >
        warning
      </span>
    </li>
  </ul>
</div>
`;

exports[`<Icon /> InText story renders snapshot 1`] = `
<p
  class="text text--body"
>
  The svg icon defaults to the surrounding text size (
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      icon with 1em line height
    </title>
    <use
      xlink:href="test-file-stub#account-circle"
    />
  </svg>
  ; 1em), but often looks better with the line height (
  <svg
    class="icon"
    fill="currentColor"
    height="2em"
    role="img"
    style="--icon-size: 2em;"
    width="2em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      icon with 2em line height
    </title>
    <use
      xlink:href="test-file-stub#account-circle"
    />
  </svg>
  ; 2em) which is harder to determine. Take a look at the icons available in
   
  <a
    href="https://material-ui.com/components/material-icons/"
    rel="noreferrer"
    target="_blank"
  >
    https://material-ui.com/components/material-icons/
  </a>
  , currently we only support the filled icons.
</p>
`;

exports[`<Icon /> Large story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="4em"
  style="--icon-size: 4em;"
  width="4em"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;

exports[`<Icon /> Medium story renders snapshot 1`] = `
<svg
  aria-hidden="true"
  class="icon"
  fill="currentColor"
  height="2em"
  style="--icon-size: 2em;"
  width="2em"
  xmlns="http://www.w3.org/2000/svg"
>
  <use
    xlink:href="test-file-stub#close"
  />
</svg>
`;
